G5: restore semantic replay metric producers
Promote the inherited HTTP parsing and transformation pipeline onto request-owned contexts, expose deployed request-preparation and tuple-construction adapters, and populate tuple comparison attributes from the actual source and target messages.

Signed-off-by: Greg Schohn <schohn@amazon.com>